@@ -6,6 +6,8 @@ Changes from jTDS 0.7.1
    specification.
  o Numerous minor performance enhancements that reduce memory allocations,
    assignments and cost of control logic.
+ o Added static Driver.getVersion() method that returns the current version
+   per enhancement request [908906] 0.7: Static Version information, please.
    
 03/03/2004 - Brian Heineman
  o Corrected bug [909169] jTDS 0.7: introduced another bug (Stored Procedure);
